--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,4 +70,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="May 8, 2019"
+        android:textColor="#7C7777"
+        tools:layout_editor_absoluteX="159dp"
+        tools:layout_editor_absoluteY="288dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
