--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="28dp"
+        android:layout_marginRight="20dp"
         android:text="Aladdin (2019)"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:layout_marginRight="20dp"
+        layout
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/postor2"
@@ -56,7 +57,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
 
-        app:layout_constraintGuide_begin="301dp" />
+        app:layout_constraintGuide_begin="326dp" />
 
     <TextView
         android:id="@+id/date"
@@ -74,50 +75,52 @@
         app:layout_constraintTop_toBottomOf="@+id/alladin"
         app:layout_constraintVertical_bias="0.0" />
 
-
-
-    \.toStartOf="@+id/BUY"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guideline3" />
-
     <com.google.android.material.button.MaterialButton
         android:id="@+id/BUY"
-        cosnstra
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#EF1A62"
         android:text="BUY FROM $9.99"
         app:cornerRadius="7dp"
+        app:layout_constraintBottom_toBottomOf="@+id/RENT"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/RENT"
-        app:layout_constraintTop_toTopOf="@+id/guideline3" />
+        app:layout_constraintTop_toBottomOf="@+id/date"
+        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_chainStyle="spread" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/RENT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@+id/BUY"
         android:backgroundTint="#EF1A62"
-        android:layout_marginLeft="BUY"
         android:text="RENT FROM $4.99"
         app:cornerRadius="7dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd="@id/BUY"
         app:layout_constraintEnd_toStartOf="@+id/BUY"
         app:layout_constraintEndtoStartOf="@bild"
         app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="301dp" />
+        app:layout_constraintTop_toBottomOf="@+id/guideline3"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/line"
-        lcn
-        sli
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:srcCompat="@android:drawable/bottom_bar"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY=400dp" />
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:backgroundTint="#525756"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.483"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline3"
+        android:layout_marginTop="60dp"
+        app:srcCompat="@android:drawable/bottom_bar" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
