--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,22 +11,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="16dp"
         android:layout_marginRight="20dp"
-        android:text="Aladdin (2019)"
+        android:text="@string/alladin"
         android:textSize="24sp"
         android:textStyle="bold"
-        layout
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/postor2"
-        app:layout_constraintTop_toBottomOf="@+id/poster1" />
+        app:layout_constraintTop_toBottomOf="@+id/poster1"
+         />
 
     <ImageView
         android:id="@+id/poster1"
         android:layout_width="448dp"
         android:layout_height="228dp"
-        android:layout_marginBottom="584dp"
+        android:layout_marginBottom="152dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/dcdwcgn2t2c99uuss98mgn" />
@@ -36,7 +36,7 @@
         android:layout_width="110dp"
         android:layout_height="170dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="124dp"
         android:layout_marginEnd="60dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.0"
@@ -56,7 +56,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-
         app:layout_constraintGuide_begin="326dp" />
 
     <TextView
@@ -66,21 +65,21 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="180dp"
         android:layout_marginBottom="16dp"
-        android:text="May 8, 2019"
+        android:text="@string/date"
         android:textColor="#757575"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/alladin"
         app:layout_constraintTop_toBottomOf="@+id/alladin"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.88" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/BUY"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#EF1A62"
-        android:text="BUY FROM $9.99"
+        android:text="@string/buy"
         app:cornerRadius="7dp"
         app:layout_constraintBottom_toBottomOf="@+id/RENT"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,7 +95,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@+id/BUY"
         android:backgroundTint="#EF1A62"
-        android:text="RENT FROM $4.99"
+        android:text="@string/rent"
         app:cornerRadius="7dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd="@id/BUY"
