defined strings and fixes some probs

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="16dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp"
         android:text="@string/alladin"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -93,7 +93,7 @@
         android:id="@+id/RENT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@+id/BUY"
+        android:layout_marginStart="@+id/BUY"
         android:backgroundTint="#EF1A62"
         android:text="@string/rent"
         app:cornerRadius="7dp"
