--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
 
     <ImageView
         android:id="@+id/poster1"
+        android:contentDescription="@string/poster1"
         android:layout_width="448dp"
         android:layout_height="228dp"
         android:layout_marginBottom="152dp"
@@ -33,6 +34,7 @@
 
     <ImageView
         android:id="@+id/postor2"
+        android:contentDescription="@string/poster2"
         android:layout_width="110dp"
         android:layout_height="170dp"
         android:layout_marginStart="16dp"
@@ -87,7 +89,8 @@
         app:layout_constraintStart_toEndOf="@+id/RENT"
         app:layout_constraintTop_toBottomOf="@+id/date"
         app:layout_constraintVertical_bias="1.0"
-        app:layout_constraintVertical_chainStyle="spread" />
+        app:layout_constraintVertical_chainStyle="spread"
+        tools:ignore="TextContrastCheck" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/RENT"
@@ -105,10 +108,12 @@
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/guideline3"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="TextContrastCheck" />
 
     <ImageView
         android:id="@+id/line"
+        android:contentDescription="@string/thinline"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
