--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     tools:context=".MainActivity">
 
+
     <TextView
         android:id="@+id/alladin"
         android:layout_width="wrap_content"
@@ -19,27 +20,28 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/postor2"
-        app:layout_constraintTop_toBottomOf="@+id/poster1"
-         />
+        app:layout_constraintTop_toBottomOf="@+id/poster1" />
 
     <ImageView
         android:id="@+id/poster1"
+        android:layout_width="415dp"
+        android:layout_height="250dp"
         android:contentDescription="@string/poster1"
-        android:layout_width="448dp"
-        android:layout_height="228dp"
-        android:layout_marginBottom="152dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingTop="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/alladin"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/dcdwcgn2t2c99uuss98mgn" />
 
     <ImageView
         android:id="@+id/postor2"
-        android:contentDescription="@string/poster2"
         android:layout_width="110dp"
         android:layout_height="170dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="124dp"
         android:layout_marginEnd="60dp"
+        android:contentDescription="@string/poster2"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,13 +82,14 @@
         android:id="@+id/BUY"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
         android:backgroundTint="#EF1A62"
         android:text="@string/buy"
         app:cornerRadius="7dp"
         app:layout_constraintBottom_toBottomOf="@+id/RENT"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/RENT"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/date"
         app:layout_constraintVertical_bias="1.0"
         app:layout_constraintVertical_chainStyle="spread"
@@ -96,34 +99,43 @@
         android:id="@+id/RENT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@+id/BUY"
         android:backgroundTint="#EF1A62"
         android:text="@string/rent"
         app:cornerRadius="7dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd="@id/BUY"
+        app:layout_constraintTop_toBottomOf="@id/guideline3"
         app:layout_constraintEnd_toStartOf="@+id/BUY"
-        app:layout_constraintEndtoStartOf="@bild"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guideline3"
-        app:layout_constraintVertical_bias="0.0"
-        tools:ignore="TextContrastCheck" />
+        tools:ignore="TextContrastCheck"
+        tools:layout_editor_absoluteY="326dp" />
 
     <ImageView
         android:id="@+id/line"
-        android:contentDescription="@string/thinline"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="20dp"
         android:backgroundTint="#525756"
+        android:contentDescription="@string/thinline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline3"
-        android:layout_marginTop="60dp"
+        app:srcCompat="@android:drawable/bottom_bar" />
+
+    <ImageView
+        android:id="@+id/line2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginEnd="20dp"
+        android:backgroundTint="#525756"
+        android:contentDescription="@string/thinline1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.483"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline3"
         app:srcCompat="@android:drawable/bottom_bar" />
 
 
