--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:context=".MainActivity">
 
 
@@ -24,14 +24,15 @@
 
     <ImageView
         android:id="@+id/poster1"
-        android:layout_width="415dp"
-        android:layout_height="250dp"
+        android:layout_width="416dp"
+        android:layout_height="226dp"
+        android:layout_marginBottom="60dp"
         android:contentDescription="@string/poster1"
         android:paddingTop="0dp"
         app:layout_constraintBottom_toTopOf="@+id/alladin"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/dcdwcgn2t2c99uuss98mgn" />
 
     <ImageView
@@ -39,7 +40,7 @@
         android:layout_width="110dp"
         android:layout_height="170dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="140dp"
         android:layout_marginEnd="60dp"
         android:contentDescription="@string/poster2"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -102,41 +103,69 @@
         android:backgroundTint="#EF1A62"
         android:text="@string/rent"
         app:cornerRadius="7dp"
-        app:layout_constraintTop_toBottomOf="@id/guideline3"
         app:layout_constraintEnd_toStartOf="@+id/BUY"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guideline3"
         tools:ignore="TextContrastCheck"
         tools:layout_editor_absoluteY="326dp" />
 
-    <ImageView
-        android:id="@+id/line"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="20dp"
-        android:backgroundTint="#525756"
-        android:contentDescription="@string/thinline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline3"
-        app:srcCompat="@android:drawable/bottom_bar" />
 
-    <ImageView
-        android:id="@+id/line2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="140dp"
-        android:layout_marginEnd="20dp"
-        android:backgroundTint="#525756"
-        android:contentDescription="@string/thinline1"
+    <View
+        android:layout_width="400dp"
+        android:layout_height="2dp"
+        android:layout_marginTop="60dp"
+        android:background="#525756"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline3"
-        app:srcCompat="@android:drawable/bottom_bar" />
+        app:layout_constraintTop_toTopOf="@+id/guideline3" />
+
+    <LinearLayout
+        android:layout_width="370dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="68dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.39"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline3">
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            app:cornerRadius="50dp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            app:cornerRadius="50dp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            app:cornerRadius="50dp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            app:cornerRadius="50dp" />
+
+    </LinearLayout>
+    <View
+        android:layout_width="400dp"
+        android:layout_height="2dp"
+        android:layout_marginTop="200dp"
+        android:background="#525756"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
