--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -156,7 +156,7 @@
             android:layout_weight="1"
             android:backgroundTint="#AEF4EB97"
             app:cornerRadius="50dp"
-            app:icon="@drawable/Tomato"
+            app:icon="@drawable/goje"
             app:iconGravity="textTop"
             app:iconSize="35dp"
             app:iconTint="#EA0E16"
@@ -169,7 +169,7 @@
             android:layout_weight="1"
             android:backgroundTint="#E91E63"
             app:cornerRadius="50dp"
-            app:icon="@drawable/Actions"
+            app:icon="@drawable/actions"
             app:iconGravity="end"
             app:iconSize="40dp"
             app:iconTint="#F8FEFF"
